added test for validation of multiple clauses